--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo">Sayan</a>
+        <a href="#" class="nav__logo">Sayan .</a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
@@ -88,13 +88,13 @@
       <!--===== ABOUT =====-->
       <section class="container section section__height" id="about">
         <h2 class="section_title">About Me</h2>
-        <span class="section_subtitle">My Introduction</span>
+        <span class="section_subtitle">Introduction</span>
       </section>
 
       <!--=============== TECHNOLOGY ===============-->
       <section class="container section section__height" id="technology">
         <h2 class="section_title">Technology</h2>
-        <span class="section_subtitle">My Tech Stacks</span>
+        <span class="section_subtitle">Tech Stacks</span>
       </section>
 
       <!--=============== Experience ===============-->
@@ -197,8 +197,27 @@
             </div>
           </form>
         </div>
-        <div class="contact__container container grid">
+        <div class="container grid">
           <h3 class="contact__title">You can also reach me out at</h3>
+
+          <div class="contact__social">
+            <ul>
+              <a href="" target="_blank"
+                ><i class="bx bxl-blogger blogger"></i
+              ></a>
+              <a href="https://github.com/Sayan-Maity" target="_blank"
+                ><i class="bx bxl-github github"></i
+              ></a>
+              <a><i class="bx bxl-linkedin linkedin"></i></a>
+              <a><i class="bx bxl-gmail gmail"></i></a>
+              <a><i class="bx bxl-meta meta"></i></a>
+              <a><i class="bx bxl-instagram instagram"></i></a>
+              <a><i class="bx bxl-discord-alt discord"></i></a>
+              <a><i class="bx bxl-spotify spotify"></i></a>
+              <a><i class="bx bxl-twitter twitter"></i></a>
+              <a><i class="bx bxl-stack-overflow stackoverflow"></i></a>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
