--- a/index.html
+++ b/index.html
@@ -202,20 +202,68 @@
 
           <div class="contact__social">
             <ul>
-              <a href="" target="_blank"
+              <a href="" target="_blank" id="a-blogger"
                 ><i class="bx bxl-blogger blogger"></i
-              ></a>
-              <a href="https://github.com/Sayan-Maity" target="_blank"
+                ><span class="span__a-blogger">Blog</span></a
+              >
+
+              <a
+                href="https://github.com/Sayan-Maity"
+                target="_blank"
+                id="a-github"
                 ><i class="bx bxl-github github"></i
-              ></a>
-              <a><i class="bx bxl-linkedin linkedin"></i></a>
-              <a><i class="bx bxl-gmail gmail"></i></a>
-              <a><i class="bx bxl-meta meta"></i></a>
-              <a><i class="bx bxl-instagram instagram"></i></a>
-              <a><i class="bx bxl-discord-alt discord"></i></a>
-              <a><i class="bx bxl-spotify spotify"></i></a>
-              <a><i class="bx bxl-twitter twitter"></i></a>
-              <a><i class="bx bxl-stack-overflow stackoverflow"></i></a>
+                ><span class="span__a-github">Github</span></a
+              >
+              <a
+                href="https://www.linkedin.com/in/sayan-maity2003/"
+                target="_blank"
+                id="a-linkedin"
+                ><i class="bx bxl-linkedin linkedin"></i
+                ><span class="span__a-linkedin">Linkedin</span></a
+              >
+              <a href="mailto:sayancr777@gmail.com" target="_blank" id="a-gmail"
+                ><i class="bx bxl-gmail gmail"></i
+                ><span class="span__a-gmail">Gmail</span></a
+              >
+              <a
+                href="https://www.facebook.com/sayan.maity.7169709/"
+                target="_blank"
+                id="a-meta"
+                ><i class="bx bxl-meta meta"></i
+                ><span class="span__a-meta">Meta</span></a
+              >
+              <a
+                href="https://www.instagram.com/sayancr777_official/"
+                target="_blank"
+                id="a-instagram"
+                ><i class="bx bxl-instagram instagram"></i
+                ><span class="span__a-instagram">Instagram</span></a
+              >
+              <a
+                href="https://discord.com/channels/@me/912927284850225153"
+                target="_blank"
+                id="a-discord"
+                ><i class="bx bxl-discord-alt discord"></i
+                ><span class="span__a-discord">Discord</span></a
+              >
+              <a
+                href="https://www.spotify.com/in-en/"
+                target="_blank"
+                id="a-spotify"
+                ><i class="bx bxl-spotify spotify"></i
+                ><span class="span__a-spotify">Spotify</span></a
+              >
+              <a href="https://twitter.com/" target="_blank" id="a-twitter"
+                ><i class="bx bxl-twitter twitter"></i
+                ><span class="span__a-twitter">Twitter</span></a
+              >
+              <a
+                href="https://stackoverflow.com/users/16626079/sayan-maity"
+                target="_blank"
+                id="a-stackoverflow"
+                ><i class="bx bxl-stack-overflow stackoverflow"></i
+                ><span class="span__a-stackoverflow">Stackoverflow</span></a
+              >
             </ul>
           </div>
         </div>
